--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
@@ -70,3 +71,4 @@
     "vitest": "^0.34.6"
   }
 }
+
